--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "desafio-monitor",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "picomatch": "^4.0.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
